# WEEK2_Game

./: .gitignore  CMakeLists.txt
assets/models/Pistol/: PistolFinal.mtl
assets/shaders/: gun.frag  gun.vert  world.frag  world.vert
src/: main.cpp
src/World/: Level.cpp  Level.h  Sprite.cpp  Sprite.h
src/core/: Shader.cpp  Shader.h  camera.cpp  camera.h  mesh.cpp  mesh.h
